--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ theme:
     - navigation.instant
     - navigation.tracking
     - navigation.top
+    - toc.integrate
     - search.suggest
     - search.highlight
     - content.code.copy
